--- a/project.config.json
+++ b/project.config.json
@@ -28,6 +28,7 @@
       "disablePlugins": [],
       "outputPath": ""
     },
+    "enableEngineNative": false,
     "bundle": false,
     "useIsolateContext": true,
     "useCompilerModule": true,
@@ -39,7 +40,7 @@
   "compileType": "miniprogram",
   "libVersion": "1.9.4",
   "appid": "wx489e0165383e5913",
-  "projectname": "moss-kaishu",
+  "projectname": "listenApp",
   "debugOptions": {
     "hidedInDevtools": []
   },
