--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "1.9.4",
-  "appid": "wx489e0165383e5913",
+  "appid": "wx06ff5ead752c29e3",
   "projectname": "listenApp",
   "debugOptions": {
     "hidedInDevtools": []
