--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
     "checkSiteMap": true,
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
-    "useMultiFrameRuntime": true,
+    "useMultiFrameRuntime": false,
     "useApiHook": true,
     "babelSetting": {
       "ignore": [],
@@ -35,13 +35,12 @@
     "userConfirmedUseCompilerModuleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true,
-    "useApiHostProcess": true
+    "minifyWXSS": true
   },
   "compileType": "miniprogram",
   "libVersion": "1.9.4",
-  "appid": "wx06ff5ead752c29e3",
-  "projectname": "listenApp",
+  "appid": "wx489e0165383e5913",
+  "projectname": "%E5%96%9C%E9%A9%AC%E6%8B%89%E9%9B%85",
   "debugOptions": {
     "hidedInDevtools": []
   },
