--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     "navigationBarBackgroundColor": "#202020",
     "navigationBarTitleText": "小程序模板",
     "navigationBarTextStyle": "white",
-    "mossPkgName": "kaishustory"
+    "mossPkgName": "ximalayaxin"
   },
   "permission": {
     "scope.userLocation": {
