完成已购买，vip
完成已购买，vip

--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
   },
   "tabBar": {
     "color": "#bebebe",
-    "selectedColor": "#ffac2d",
+    "selectedColor": "#dc5e4e",
     "backgroundColor": "#202020",
     "borderStyle": "black",
     "position": "top",
