修改搜索样式

--- a/project.config.json
+++ b/project.config.json
@@ -21,9 +21,8 @@
     "checkSiteMap": true,
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
-    "useMultiFrameRuntime": true,
+    "useMultiFrameRuntime": false,
     "useApiHook": true,
-    "useApiHostProcess": true,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
@@ -34,14 +33,13 @@
     "useIsolateContext": true,
     "useCompilerModule": true,
     "userConfirmedUseCompilerModuleSwitch": false,
-    "userConfirmedBundleSwitch": true,
     "packNpmManually": false,
     "packNpmRelationList": [],
     "minifyWXSS": true
   },
   "compileType": "miniprogram",
   "libVersion": "1.9.4",
-  "appid": "wx06ff5ead752c29e3",
+  "appid": "wx489e0165383e5913",
   "projectname": "%E5%96%9C%E9%A9%AC%E6%8B%89%E9%9B%85",
   "debugOptions": {
     "hidedInDevtools": []
