--- a/project.config.json
+++ b/project.config.json
@@ -39,7 +39,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "1.9.4",
-  "appid": "wx489e0165383e5913",
+  "appid": "wx06ff5ead752c29e3",
   "projectname": "%E5%96%9C%E9%A9%AC%E6%8B%89%E9%9B%85",
   "debugOptions": {
     "hidedInDevtools": []
