--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "pages": [
-    "pages/search/search",
+    
     "pages/index/index", 
+    "pages/search/search",
+    "pages/author/author", 
     "pages/personalCenter/personalCenter",
     "pages/like/like",
     "pages/member/member",
