--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "pages/personalCenter/personalCenter",
     "pages/like/like",
     "pages/member/member",
-    "pages/abumInfo/abumInfo",
+    "pages/albumInfo/albumInfo",
     "pages/playInfo/playInfo",
     "pages/latelyListen/latelyListen",
     "pages/member/pay",
